# indicator_temp

./: CMakeLists.txt  data.txt  main.cpp  temp.cpp  temp.h
